adt2unit.h

uint16_t nFreq (uint8_t note);
void     change_freq (uint8_t chan, uint16_t freq);
uint8_t  calc_pattern_pos (uint8_t pattern);
uint16_t concw (uint8_t lo, uint8_t hi);
uint8_t  ins_parameter (uint8_t ins, uint8_t param);
bool     is_chan_adsr_data_empty (uint8_t chan);
bool     is_ins_adsr_data_empty (uint8_t ins);
uint8_t  scale_volume (uint8_t volume, uint8_t scale_factor);
uint16_t _macro_speedup (void);
void update_timer (uint16_t Hz);
void key_on (uint8_t chan);
void key_off (uint8_t chan);
void release_sustaining_sound (uint8_t chan);
void init_macro_table (uint8_t chan, uint8_t note, uint8_t ins, uint16_t freq);
void set_ins_volume (uint8_t modulator, uint8_t carrier, uint8_t chan);
void update_modulator_adsrw (uint8_t chan);
void update_carrier_adsrw (uint8_t chan);
void update_fmpar (uint8_t chan);
void poll_proc (void);
void macro_poll_proc (void);
void init_buffers (void);
void init_player (void);
void start_playing (void);
void stop_playing (void);
void update_song_position (void);
void change_frequency (uint8_t chan, uint16_t freq);
void set_global_volume (void);
void set_overall_volume (uint8_t level);
void set_ins_data (uint8_t ins, uint8_t chan);
void init_timer_proc (void);
void done_timer_proc (void);
void get_chunk (uint8_t pattern, uint8_t line, uint8_t channel, tCHUNK *chunk);
void put_chunk (uint8_t pattern, uint8_t line, uint8_t channel, const tCHUNK *chunk);
int16_t calc_order_jump (void);
int16_t calc_following_order (uint8_t order);
bool    is_4op_chan (uint8_t chan);
void count_order (uint8_t *entries);
void init_old_songdata (void);
void init_songdata (tFIXED_SONGDATA *song);
void output_note (uint8_t note, uint8_t ins, uint8_t chan,
                  bool restart_macro, bool restart_adsr);
int32_t min (int32_t value, int32_t minimum);
int32_t max (int32_t value, int32_t maximum);
void    TimerSetup (uint32_t Hz);