adt2play/a2player.h

void     timer_poll_proc (void);
void init_a2player (void);