adt2play/a2player.pas


function nFreq(note: Byte): Word; cdecl; external;
function calc_freq_shift_up(freq,shift: Word): Word; cdecl; external;
function calc_freq_shift_down(freq,shift: Word): Word; cdecl; external;
function calc_vibtrem_shift(chan: Byte; var table_data): Word; cdecl; external;
procedure change_freq(chan: Byte; freq: Word); cdecl; external;
function ins_parameter(ins,param: Byte): Byte; cdecl; external;
function is_chan_adsr_data_empty(chan: Byte): Boolean; cdecl; external;
function is_ins_adsr_data_empty(ins: Byte): Boolean; cdecl; external;
function is_data_empty(var buf; size: Longint): Boolean; cdecl; external;
//min
//max
function concw(lo,hi: Byte): Word; cdecl; external;
procedure synchronize_song_timer; cdecl; external;
procedure change_frequency(chan: Byte; freq: Word); cdecl; external;
function _macro_speedup: Word; cdecl; external;
procedure TimerSetup(Hz: Longint); cdecl; forward;
procedure update_timer(Hz: Word); cdecl; external;
procedure update_playback_speed(speed_shift: Longint); cdecl; external;
procedure key_on(chan: Byte); cdecl; external;
procedure key_off(chan: Byte); cdecl; external;
procedure release_sustaining_sound(chan: Byte); cdecl; external;
function scale_volume(volume,scale_factor: Byte): Byte; cdecl; external;
function _4op_data_flag(chan: Byte): Dword; cdecl; external;
function _4op_vol_valid_chan(chan: Byte): Boolean; cdecl; external;
procedure set_ins_volume(modulator,carrier,chan: Byte); cdecl; external;
procedure set_ins_volume_4op(volume,chan: Byte); cdecl; external;
procedure reset_ins_volume(chan: Byte); cdecl; external;
procedure set_global_volume; cdecl; external;
//set_overall_volume
procedure init_macro_table(chan,note,ins: Byte; freq: Word); cdecl; external;
procedure set_ins_data(ins,chan: Byte); cdecl; external;
procedure update_modulator_adsrw(chan: Byte); cdecl; external;
procedure update_carrier_adsrw(chan: Byte); cdecl; external;
procedure update_fmpar(chan: Byte); cdecl; external;
//is_4op_chan
procedure output_note(note,ins,chan: Byte;
                      restart_macro,restart_adsr: Boolean); cdecl; external;
procedure generate_custom_vibrato(value: Byte); cdecl; external;
procedure update_fine_effects(chan: Byte); cdecl; external;
{$I adt2unit/pas/play_line.pas}
procedure portamento_up(chan: Byte; slide: Word; limit: Word); cdecl; external;
procedure portamento_down(chan: Byte; slide: Word; limit: Word); cdecl; external;
procedure macro_vibrato__porta_up(chan: Byte; depth: Byte); cdecl; external;
procedure macro_vibrato__porta_down(chan: Byte; depth: Byte); cdecl; external;
procedure tone_portamento(chan: Byte); cdecl; external;
procedure tone_portamento2(chan: Byte); cdecl; external;
//slide_carrier_volume_up
//slide_modulator_volume_up
procedure slide_volume_up(chan,slide: Byte); cdecl; external;
//slide_carrier_volume_down
//slide_modulator_volume_down
procedure slide_volume_down(chan,slide: Byte); cdecl; external;
procedure volume_slide(chan,up_speed,down_speed: Byte); cdecl; external;
procedure global_volume_slide(up_speed,down_speed: Byte); cdecl; external;
procedure arpeggio(chan: Byte); cdecl; external;
procedure arpeggio2(chan: Byte); cdecl; external;
procedure vibrato(chan: Byte); cdecl; external;
procedure vibrato2(chan: Byte); cdecl; external;
procedure tremolo(chan: Byte); cdecl; external;
procedure tremolo2(chan: Byte); cdecl; external;
procedure update_effects; cdecl; external;
//update_fine_effects
procedure update_extra_fine_effects; cdecl; external;
//calc_following_order
function calc_order_jump: Integer; cdecl; external;
procedure update_song_position; cdecl; external;
procedure poll_proc; cdecl; external;
//macro_poll_proc
//timer_poll_proc

const
  ___IRQ_DATA_END___: Dword = 0;

procedure ___IRQ_CODE_END___; begin end;

procedure TimerSetup(Hz: Longint); cdecl; external;
procedure TimerDone; cdecl; external;
//init_timer_proc
//done_timer_proc
function calc_pattern_pos(pattern: Byte): Byte; cdecl; external;

procedure init_buffers; cdecl; external;
procedure init_player; cdecl; external;
//stop_playing
//init_old_songdata
//init_songdata
//start_playing
//get_chunk
//put_chunk
//count_order
procedure init_a2player; cdecl; external;

var
  old_exit_proc: procedure;

procedure new_exit_proc;
begin
  Unlock_Data(___UNIT_DATA_START___,DWORD(Addr(___UNIT_DATA_END___))-DWORD(Addr(___UNIT_DATA_START___)));
  Unlock_Data(___IRQ_DATA_START___,DWORD(Addr(___IRQ_DATA_END___))-DWORD(Addr(___IRQ_DATA_START___)));
  Unlock_Code(@___IRQ_CODE_START___,DWORD(@___IRQ_CODE_END___)-DWORD(@___IRQ_CODE_START___));
  ExitProc := @old_exit_proc;
end;

begin
  init_a2player;
  Lock_Data(___UNIT_DATA_START___,DWORD(Addr(___UNIT_DATA_END___))-DWORD(Addr(___UNIT_DATA_START___)));
  Lock_Data(___IRQ_DATA_START___,DWORD(Addr(___IRQ_DATA_END___))-DWORD(Addr(___IRQ_DATA_START___)));
  Lock_Code(@___IRQ_CODE_START___,DWORD(@___IRQ_CODE_END___)-DWORD(@___IRQ_CODE_START___));
  @old_exit_proc := ExitProc;
  ExitProc := @new_exit_proc;
end.
